mobile menu z-index fixed search form added to mobile search form mobile menu z-index fixed

--- a/assets/src/sass/frontend/_navigation.scss
+++ b/assets/src/sass/frontend/_navigation.scss
@@ -146,6 +146,12 @@
     grid-gap: $gridGutter;
   }
 
+  .search-form {
+    margin-top: 5vh;
+    position: relative;
+    z-index: 1;
+  }
+
   ul {
     list-style-type: none;
     overflow-x: hidden;
